Update review get requests
